Fix shrinking issues with truncated text

--- a/src/scss/components/_tasks.scss
+++ b/src/scss/components/_tasks.scss
@@ -14,6 +14,7 @@
   &-info,
   &-container {
     flex: 1;
+    min-width: 0;
   }
 
   &-title {
